--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Greek literature, Modern'
 - !lcc 'PA'
+- GITenberg
 title: Η αγάπη (Τριλογία)
 url: http://www.gutenberg.org/ebooks/32304
